author:
    Taylor Fausak
bug-reports:
    https://github.com/tfausak/threase/issues
build-type:
    Simple
cabal-version:
    >= 1.18
category:
    Game
copyright:
    2014 Taylor Fausak <taylor@fausak.me>
--description:
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
homepage:
    https://github.com/tfausak/threase
license-file:
    LICENSE.txt
license:
    MIT
maintainer:
    taylor@fausak.me
name:
    threase
synopsis:
    Plays Threes with ease.
version:
    0.0.0

source-repository head
    location:
        git://github.com/tfausak/threase.git
    type:
        git

flag documentation
    default:
        False

library
    build-depends:
        base
    default-language:
        Haskell2010
    exposed-modules:
        Threase
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library

    if flag(documentation)
        build-depends:
            hscolour == 1.20.*

executable threase
    build-depends:
        base
      , threase
    default-language:
        Haskell2010
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        executable
    main-is:
        Main.hs

test-suite hspec
    build-depends:
        base
      , threase
      , HUnit
      , QuickCheck
      , hspec == 1.8.*
    default-language:
        Haskell2010
    ghc-options:
        -fhpc
        -Wall
        -Werror
    hs-source-dirs:
        library
        test-suite
    main-is:
        Spec.hs
    other-modules:
        Threase
        ThreaseSpec
    type:
        exitcode-stdio-1.0

test-suite doctest
    build-depends:
        base
      , Glob == 0.7.*
      , doctest == 0.9.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        DocTest.hs
    type:
        exitcode-stdio-1.0
